--- a/VUIComponents/Classes/Components/Alert Views/Alert page/AlertView_RTL.xib
+++ b/VUIComponents/Classes/Components/Alert Views/Alert page/AlertView_RTL.xib
@@ -49,8 +49,8 @@
                                         <action selector="closeButtonAction:" destination="-1" eventType="touchUpInside" id="4Bt-Me-KjQ"/>
                                     </connections>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKI-Yi-GWE">
-                                    <rect key="frame" x="187.5" y="48" width="0.0" height="32.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKI-Yi-GWE">
+                                    <rect key="frame" x="35" y="48" width="305" height="32.5"/>
                                     <constraints>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32.5" id="fea-u9-fPV"/>
                                     </constraints>
@@ -61,6 +61,7 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.7590779049295775" colorSpace="calibratedWhite"/>
                             <constraints>
+                                <constraint firstItem="NKI-Yi-GWE" firstAttribute="width" secondItem="u1a-GY-3rs" secondAttribute="width" constant="-70" id="0rg-Od-aEp"/>
                                 <constraint firstAttribute="bottom" secondItem="NKI-Yi-GWE" secondAttribute="bottom" constant="10" id="9Lx-uy-nuP"/>
                                 <constraint firstItem="NKI-Yi-GWE" firstAttribute="centerX" secondItem="u1a-GY-3rs" secondAttribute="centerX" id="Aco-Ez-IUk"/>
                                 <constraint firstItem="jws-vX-mrw" firstAttribute="left" secondItem="u1a-GY-3rs" secondAttribute="left" constant="11" id="Vke-Os-WDL"/>
