--- a/VUIComponents/Classes/Components/UI/Card/SignpostCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/SignpostCardView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -30,7 +30,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="280" height="148"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XuU-HP-Gt6">
-                            <rect key="frame" x="-0.5" y="-0.5" width="280" height="149"/>
+                            <rect key="frame" x="0.0" y="-0.5" width="280" height="149"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mg2-Go-cfo">
                                     <rect key="frame" x="0.0" y="0.0" width="6" height="149"/>
@@ -59,8 +59,8 @@
                                             <attributedString key="attributedText"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardArrow" translatesAutoresizingMaskIntoConstraints="NO" id="deb-s0-fzZ">
-                                            <rect key="frame" x="220" y="58" width="24" height="24"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardArrow" translatesAutoresizingMaskIntoConstraints="NO" id="deb-s0-fzZ">
+                                            <rect key="frame" x="220" y="57.5" width="24" height="24"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="24" id="Rig-O5-m2U"/>
                                                 <constraint firstAttribute="height" constant="24" id="hv6-1v-E96"/>
@@ -137,6 +137,6 @@
         </view>
     </objects>
     <resources>
-        <image name="CardArrow" width="64" height="64"/>
+        <image name="cardArrow" width="102.40000152587891" height="102.40000152587891"/>
     </resources>
 </document>
