--- a/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
@@ -66,7 +66,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="szk-GC-Gjq">
                             <rect key="frame" x="16" y="260" width="318" height="45"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="converterImg" translatesAutoresizingMaskIntoConstraints="NO" id="JzB-xd-Nxz">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="converterArrowImg" translatesAutoresizingMaskIntoConstraints="NO" id="JzB-xd-Nxz">
                                     <rect key="frame" x="136.5" y="0.0" width="45" height="45"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="45" id="4MQ-Eu-g6J"/>
@@ -159,6 +159,6 @@
     </objects>
     <resources>
         <image name="VFLogoFlat" width="311.760009765625" height="311.760009765625"/>
-        <image name="converterImg" width="21.5" height="28.5"/>
+        <image name="converterArrowImg" width="21.5" height="28.5"/>
     </resources>
 </document>
