--- a/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
@@ -33,15 +33,15 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="vBH-BT-jRP">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="392"/>
+            <rect key="frame" x="0.0" y="0.0" width="350" height="396"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xc8-Q4-dXd" userLabel="BGView">
-                    <rect key="frame" x="0.0" y="0.0" width="350" height="392"/>
+                    <rect key="frame" x="0.0" y="0.0" width="350" height="396"/>
                     <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdK-cp-q17">
-                    <rect key="frame" x="0.0" y="0.0" width="350" height="382"/>
+                    <rect key="frame" x="0.0" y="0.0" width="350" height="386"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VFLogoFlat" translatesAutoresizingMaskIntoConstraints="NO" id="IiN-02-iK8">
                             <rect key="frame" x="109" y="76" width="132" height="126"/>
@@ -63,8 +63,28 @@
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
                             </userDefinedRuntimeAttributes>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qut-R8-Z8P" customClass="AnaVodafoneLabel">
+                            <rect key="frame" x="16" y="251" width="33" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="ignoresLanguageAllignment" value="YES"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQN-KO-Aq5" customClass="AnaVodafoneLabel">
+                            <rect key="frame" x="197" y="251" width="33" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="ignoresLanguageAllignment" value="YES"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="szk-GC-Gjq">
-                            <rect key="frame" x="16" y="260" width="318" height="45"/>
+                            <rect key="frame" x="16" y="272" width="318" height="45"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="converterArrowImg" translatesAutoresizingMaskIntoConstraints="NO" id="JzB-xd-Nxz">
                                     <rect key="frame" x="136.5" y="0.0" width="45" height="45"/>
@@ -105,7 +125,7 @@
                             </constraints>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="IIr-kb-fLN" customClass="CvvTextField">
-                            <rect key="frame" x="16" y="321" width="318" height="45"/>
+                            <rect key="frame" x="16" y="333" width="318" height="45"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="iYS-uX-wTG"/>
                             </constraints>
@@ -116,21 +136,24 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="gQH-LH-Mwe" firstAttribute="top" secondItem="IiN-02-iK8" secondAttribute="bottom" constant="30" id="10l-Fp-hBZ"/>
-                        <constraint firstAttribute="bottom" secondItem="IIr-kb-fLN" secondAttribute="bottom" constant="16" id="2Db-x5-o5P"/>
                         <constraint firstItem="IIr-kb-fLN" firstAttribute="top" secondItem="szk-GC-Gjq" secondAttribute="bottom" constant="16" id="4mg-qV-PZS"/>
                         <constraint firstItem="gQH-LH-Mwe" firstAttribute="width" secondItem="bdK-cp-q17" secondAttribute="width" constant="-30" id="570-gU-WQH"/>
+                        <constraint firstItem="WgW-SN-2SZ" firstAttribute="top" secondItem="zQN-KO-Aq5" secondAttribute="bottom" constant="5" id="6YC-8E-hLe"/>
+                        <constraint firstItem="qut-R8-Z8P" firstAttribute="leading" secondItem="lZJ-cu-hi4" secondAttribute="leading" id="Fax-yW-241"/>
                         <constraint firstItem="szk-GC-Gjq" firstAttribute="width" secondItem="bdK-cp-q17" secondAttribute="width" constant="-32" id="JrE-Hh-bDC"/>
                         <constraint firstItem="IiN-02-iK8" firstAttribute="top" secondItem="bdK-cp-q17" secondAttribute="top" constant="76" id="M56-9n-WDi"/>
                         <constraint firstItem="gQH-LH-Mwe" firstAttribute="centerX" secondItem="IiN-02-iK8" secondAttribute="centerX" id="S7u-Nr-riI"/>
                         <constraint firstItem="szk-GC-Gjq" firstAttribute="centerX" secondItem="bdK-cp-q17" secondAttribute="centerX" id="bNu-a4-0KF"/>
                         <constraint firstItem="IIr-kb-fLN" firstAttribute="width" secondItem="szk-GC-Gjq" secondAttribute="width" id="cUG-md-99Z"/>
+                        <constraint firstItem="zQN-KO-Aq5" firstAttribute="leading" secondItem="WgW-SN-2SZ" secondAttribute="leading" id="h7y-FI-73N"/>
+                        <constraint firstItem="lZJ-cu-hi4" firstAttribute="top" secondItem="qut-R8-Z8P" secondAttribute="bottom" constant="5" id="mVb-HZ-LBf"/>
                         <constraint firstItem="IIr-kb-fLN" firstAttribute="centerX" secondItem="szk-GC-Gjq" secondAttribute="centerX" id="qBa-QM-VpM"/>
                         <constraint firstItem="IiN-02-iK8" firstAttribute="centerX" secondItem="bdK-cp-q17" secondAttribute="centerX" id="si3-5J-jOs"/>
-                        <constraint firstItem="szk-GC-Gjq" firstAttribute="top" secondItem="gQH-LH-Mwe" secondAttribute="bottom" constant="28" id="xxt-hR-EOD"/>
+                        <constraint firstItem="szk-GC-Gjq" firstAttribute="top" secondItem="gQH-LH-Mwe" secondAttribute="bottom" constant="40" id="xxt-hR-EOD"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yP2-fK-r36">
-                    <rect key="frame" x="0.0" y="392" width="350" height="0.0"/>
+                    <rect key="frame" x="0.0" y="396" width="350" height="0.0"/>
                     <constraints>
                         <constraint firstAttribute="height" id="ceC-xZ-piL"/>
                     </constraints>
@@ -154,7 +177,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="7Dc-2C-r1d"/>
-            <point key="canvasLocation" x="-349" y="-480"/>
+            <point key="canvasLocation" x="-350.39999999999998" y="-478.56071964017997"/>
         </view>
     </objects>
     <resources>
