--- a/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -35,15 +34,15 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="vBH-BT-jRP">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="396"/>
+            <rect key="frame" x="0.0" y="0.0" width="350" height="404"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xc8-Q4-dXd" userLabel="BGView">
-                    <rect key="frame" x="0.0" y="0.0" width="350" height="396"/>
+                    <rect key="frame" x="0.0" y="0.0" width="350" height="404"/>
                     <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdK-cp-q17">
-                    <rect key="frame" x="0.0" y="0.0" width="350" height="386"/>
+                    <rect key="frame" x="0.0" y="0.0" width="350" height="394"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VFLogoFlat" translatesAutoresizingMaskIntoConstraints="NO" id="IiN-02-iK8">
                             <rect key="frame" x="109" y="76" width="132" height="126"/>
@@ -65,20 +64,20 @@
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
                             </userDefinedRuntimeAttributes>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qut-R8-Z8P" customClass="AnaVodafoneLabel">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qut-R8-Z8P" customClass="AnaVodafoneLabel">
                             <rect key="frame" x="16" y="251" width="33" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="ignoresLanguageAllignment" value="YES"/>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
                             </userDefinedRuntimeAttributes>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQN-KO-Aq5" customClass="AnaVodafoneLabel">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zQN-KO-Aq5" customClass="AnaVodafoneLabel">
                             <rect key="frame" x="197" y="251" width="33" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="ignoresLanguageAllignment" value="YES"/>
@@ -141,6 +140,7 @@
                         <constraint firstItem="IIr-kb-fLN" firstAttribute="top" secondItem="szk-GC-Gjq" secondAttribute="bottom" constant="16" id="4mg-qV-PZS"/>
                         <constraint firstItem="gQH-LH-Mwe" firstAttribute="width" secondItem="bdK-cp-q17" secondAttribute="width" constant="-30" id="570-gU-WQH"/>
                         <constraint firstItem="WgW-SN-2SZ" firstAttribute="top" secondItem="zQN-KO-Aq5" secondAttribute="bottom" constant="5" id="6YC-8E-hLe"/>
+                        <constraint firstAttribute="bottom" secondItem="IIr-kb-fLN" secondAttribute="bottom" constant="16" id="6e9-2v-iad"/>
                         <constraint firstItem="qut-R8-Z8P" firstAttribute="leading" secondItem="lZJ-cu-hi4" secondAttribute="leading" id="Fax-yW-241"/>
                         <constraint firstItem="szk-GC-Gjq" firstAttribute="width" secondItem="bdK-cp-q17" secondAttribute="width" constant="-32" id="JrE-Hh-bDC"/>
                         <constraint firstItem="IiN-02-iK8" firstAttribute="top" secondItem="bdK-cp-q17" secondAttribute="top" constant="76" id="M56-9n-WDi"/>
@@ -155,7 +155,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yP2-fK-r36">
-                    <rect key="frame" x="0.0" y="396" width="350" height="0.0"/>
+                    <rect key="frame" x="0.0" y="404" width="350" height="0.0"/>
                     <constraints>
                         <constraint firstAttribute="height" id="ceC-xZ-piL"/>
                     </constraints>
