--- a/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/RechargeCardView.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -34,25 +35,25 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="vBH-BT-jRP">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="404"/>
+            <rect key="frame" x="0.0" y="0.0" width="350" height="421"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xc8-Q4-dXd" userLabel="BGView">
-                    <rect key="frame" x="0.0" y="0.0" width="350" height="404"/>
+                    <rect key="frame" x="0.0" y="0.0" width="350" height="421"/>
                     <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdK-cp-q17">
-                    <rect key="frame" x="0.0" y="0.0" width="350" height="394"/>
+                    <rect key="frame" x="0.0" y="0.0" width="350" height="411"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VFLogoFlat" translatesAutoresizingMaskIntoConstraints="NO" id="IiN-02-iK8">
-                            <rect key="frame" x="109" y="76" width="132" height="126"/>
+                            <rect key="frame" x="105" y="60" width="140" height="140"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="126" id="PuZ-Zt-qMD"/>
-                                <constraint firstAttribute="width" constant="132" id="fEL-vP-8Gt"/>
+                                <constraint firstAttribute="height" constant="140" id="PuZ-Zt-qMD"/>
+                                <constraint firstAttribute="width" constant="140" id="fEL-vP-8Gt"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQH-LH-Mwe" customClass="AnaVodafoneLabel">
-                            <rect key="frame" x="15" y="232" width="320" height="0.0"/>
+                            <rect key="frame" x="15" y="230" width="320" height="0.0"/>
                             <constraints>
                                 <constraint firstAttribute="height" id="UzN-mL-Q0N"/>
                             </constraints>
@@ -65,7 +66,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qut-R8-Z8P" customClass="AnaVodafoneLabel">
-                            <rect key="frame" x="16" y="251" width="33" height="16"/>
+                            <rect key="frame" x="16" y="249" width="33" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -75,7 +76,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zQN-KO-Aq5" customClass="AnaVodafoneLabel">
-                            <rect key="frame" x="197" y="251" width="33" height="16"/>
+                            <rect key="frame" x="197" y="249" width="33" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -85,7 +86,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="szk-GC-Gjq">
-                            <rect key="frame" x="16" y="272" width="318" height="45"/>
+                            <rect key="frame" x="16" y="270" width="318" height="45"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="converterArrowImg" translatesAutoresizingMaskIntoConstraints="NO" id="JzB-xd-Nxz">
                                     <rect key="frame" x="136.5" y="0.0" width="45" height="45"/>
@@ -126,7 +127,7 @@
                             </constraints>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="IIr-kb-fLN" customClass="CvvTextField">
-                            <rect key="frame" x="16" y="333" width="318" height="45"/>
+                            <rect key="frame" x="16" y="331" width="318" height="45"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="iYS-uX-wTG"/>
                             </constraints>
@@ -143,7 +144,7 @@
                         <constraint firstAttribute="bottom" secondItem="IIr-kb-fLN" secondAttribute="bottom" constant="16" id="6e9-2v-iad"/>
                         <constraint firstItem="qut-R8-Z8P" firstAttribute="leading" secondItem="lZJ-cu-hi4" secondAttribute="leading" id="Fax-yW-241"/>
                         <constraint firstItem="szk-GC-Gjq" firstAttribute="width" secondItem="bdK-cp-q17" secondAttribute="width" constant="-32" id="JrE-Hh-bDC"/>
-                        <constraint firstItem="IiN-02-iK8" firstAttribute="top" secondItem="bdK-cp-q17" secondAttribute="top" constant="76" id="M56-9n-WDi"/>
+                        <constraint firstItem="IiN-02-iK8" firstAttribute="top" secondItem="bdK-cp-q17" secondAttribute="top" constant="60" id="M56-9n-WDi"/>
                         <constraint firstItem="gQH-LH-Mwe" firstAttribute="centerX" secondItem="IiN-02-iK8" secondAttribute="centerX" id="S7u-Nr-riI"/>
                         <constraint firstItem="szk-GC-Gjq" firstAttribute="centerX" secondItem="bdK-cp-q17" secondAttribute="centerX" id="bNu-a4-0KF"/>
                         <constraint firstItem="IIr-kb-fLN" firstAttribute="width" secondItem="szk-GC-Gjq" secondAttribute="width" id="cUG-md-99Z"/>
@@ -155,7 +156,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yP2-fK-r36">
-                    <rect key="frame" x="0.0" y="404" width="350" height="0.0"/>
+                    <rect key="frame" x="0.0" y="421" width="350" height="0.0"/>
                     <constraints>
                         <constraint firstAttribute="height" id="ceC-xZ-piL"/>
                     </constraints>
@@ -179,7 +180,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="7Dc-2C-r1d"/>
-            <point key="canvasLocation" x="-350.39999999999998" y="-478.56071964017997"/>
+            <point key="canvasLocation" x="-350.39999999999998" y="-470.91454272863569"/>
         </view>
     </objects>
     <resources>
