--- a/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardViewRTL.xib
+++ b/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardViewRTL.xib
@@ -49,14 +49,14 @@
                                     <rect key="frame" x="15" y="0.0" width="349" height="153"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W4v-NH-Tyi">
-                                            <rect key="frame" x="304" y="54" width="45" height="45"/>
+                                            <rect key="frame" x="349" y="54" width="0.0" height="45"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="45" id="evH-Dj-ET8"/>
+                                                <constraint firstAttribute="width" id="evH-Dj-ET8"/>
                                                 <constraint firstAttribute="height" constant="45" id="tnU-l0-3on"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DEg-Qh-TV4">
-                                            <rect key="frame" x="30" y="25" width="259" height="0.0"/>
+                                            <rect key="frame" x="30" y="25" width="304" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="XMy-pX-vfs"/>
                                             </constraints>
@@ -64,7 +64,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5G4-Dp-XrU">
-                                            <rect key="frame" x="30" y="29" width="259" height="0.0"/>
+                                            <rect key="frame" x="30" y="29" width="304" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="cEZ-ME-oci"/>
                                             </constraints>
@@ -72,7 +72,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="diC-LQ-9f6">
-                                            <rect key="frame" x="30" y="34" width="259" height="0.0"/>
+                                            <rect key="frame" x="30" y="34" width="304" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="bxI-ya-Vh9"/>
                                             </constraints>
