--- a/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardView.xib
+++ b/VUIComponents/Classes/Components/TableCardView/CellCardView/PaymentDetailsSignPostCardView.xib
@@ -60,7 +60,7 @@
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="YMM-KW-t32"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="useRegularFont" value="YES"/>
