--- a/VUIComponents/Classes/Components/UI/Card/SignpostsWithAvatarCardViewRTL.xib
+++ b/VUIComponents/Classes/Components/UI/Card/SignpostsWithAvatarCardViewRTL.xib
@@ -49,7 +49,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VJq-3M-qwq" userLabel="Content">
                                     <rect key="frame" x="15" y="0.0" width="349" height="153"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W4v-NH-Tyi">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W4v-NH-Tyi">
                                             <rect key="frame" x="304" y="54" width="45" height="45"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="45" id="evH-Dj-ET8"/>
